I added code to make a popup window appear when the menu button is clicked, and gave the undo and new game items functionality using the code Skyler wrote

--- a/BattleshipAdvisor/res/menu/main.xml
+++ b/BattleshipAdvisor/res/menu/main.xml
@@ -2,7 +2,7 @@
 
     <item
         android:id="@+id/undo"
-        android:title="Undo">
+        android:title="Undo" android:visible="true" android:enabled="true">
     </item>
     <item
         android:id="@+id/new_game"
