--- a/BattleshipAdvisor/res/layout/activity_main.xml
+++ b/BattleshipAdvisor/res/layout/activity_main.xml
@@ -1,18 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/RelLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
-
-    <Button
-        android:id="@+id/menuButton"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Menu" />
+    tools:context=".MainActivity" 
+    android:background="@color/black">
 
     <com.gbccs112a.battleshipadvisor.BattleshipView
         android:id="@+id/BattleshipView"
@@ -22,7 +18,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="50dp"
-        android:layout_marginTop="50dp"
         android:visibility="visible" />
 
     <TableLayout
@@ -58,6 +53,7 @@
                 android:layout_weight="1"
                 android:showAsAction="always"
                 android:text="Sunk" />
+            
         </TableRow>
     </TableLayout>
 
