--- a/BattleshipAdvisor/res/menu/main.xml
+++ b/BattleshipAdvisor/res/menu/main.xml
@@ -1,8 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_settings"/>
+    <item
         android:id="@+id/undo"
-        android:title="Undo" android:visible="true" android:enabled="true">
+        android:title="Undo">
     </item>
     <item
         android:id="@+id/new_game"
